# Hacaton_Aeroflot

./: .dockerignore  .env  .envrc  .gitignore  README.md  alembic.ini  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt  start.sh  tools.db
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial.py  0002_engineers_tools.py  0003_operation_items.py
app/db/: session.py
app/schemas/: 1working_api.py  ml_service.py  test_detection.py  tools.db  working_api.py
app/schemas/routers/: auth.py  operations.py  toolkits.py
app/warehouse-frontend/: package-lock.json  package.json
app/warehouse-frontend/public/: index.html
app/warehouse-frontend/src/: 1App.js  2App.js  App.css  App.js  tools.db
config/: config.py
docker/: backend.Dockerfile  frontend.Dockerfile  ml.Dockerfile
docs/: 1. план работы.md  2. модель и структура, ООП ОБЯЗАТЕЛЬНО!.md  3. backend.md  4.fronend Reacte.md  5. финал до которого не дойдем.md  ДОП docker GPU.md
ml_service_app/: main.py
runs/detect/yolov8s_tools_detection_v2/: args.yaml
src/: check_structure.py  copy_pseudo_images.py  create_splits.py  fix_label_classes.py  fix_labels_encoding.py  main.py  model_trainer.py  unlabeled_predictions.json  update_training_set.py  update_training_set_fixed.py
src/aeroflot_project/: main.py
src/aeroflot_project/models/: dataset.yaml  model(rename hihi).ipynb  model.v.2.0.ipynb  prepare_dataset.py  train_yolo.py
ssl/: localhost.crt  localhost.key
